# WayaFi

./: .env.example  .gitignore  PATCH_README.md  README.md  SESSION_10_GUIDE.md  SESSION_1_GUIDE.md  SESSION_2_GUIDE.md  SESSION_3_GUIDE.md  SESSION_4_GUIDE.md  SESSION_5_GUIDE.md  SESSION_6_GUIDE.md  SESSION_7_GUIDE.md  SESSION_8_GUIDE.md  SESSION_9_GUIDE.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/api/: .env  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/middleware/: auth.ts  logger.ts
apps/programs/: Anchor.toml  Cargo.toml
apps/programs/programs/programs/routing-logic/: Cargo.toml
apps/programs/programs/programs/routing-logic/src/: lib.rs
apps/programs/programs/programs/stablecoin-token/: Cargo.toml
apps/programs/programs/programs/stablecoin-token/src/: lib.rs
apps/programs/programs/programs/transfer-hook/: Cargo.toml
apps/programs/programs/programs/transfer-hook/src/: lib.rs
apps/programs/programs/programs/treasury-pool/: Cargo.toml
apps/programs/programs/programs/treasury-pool/src/: lib.rs
apps/programs/programs/routing-logic/src/: lib.rs
apps/programs/programs/stablecoin-token/src/: lib.rs
apps/programs/programs/transfer-hook/src/: lib.rs
apps/programs/programs/treasury-pool/src/: lib.rs
apps/programs/tests/: irofi-full.test.ts  irofi.test.ts
apps/web/: next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconifg.json  vercel.json
apps/web/src/app/: page.tsx  (+3 more)
scripts/: demo.ts  security-audit.md
(+31 files in other folders)
