[workspace]
members = [
    "programs/stablecoin-token",
    "programs/treasury-pool",
    "programs/transfer-hook",
    "programs/routing-logic",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
